<resources>
    <string name="app_name">FitLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitlife">FitLife</string>
    <string name="last_name">Last name</string>
    <string name="start_your_exercise_journey_today">Start your exercise journey today</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First name</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="email">Email</string>
    <string name="physical_information">Physical Information</string>
    <string name="next">Next</string>
    <string name="height_cm">height (cm)</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="filter_level"><u>Level</u></string>
    <string name="filter_length"><u>Length</u></string>
    <string name="back_button">back button</string>
    <string name="save_workout_routine">save workout routine</string>
    <string name="delete_workout_routine">delete workout routine</string>
    <string name="image_for_routine">image for routine</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>