<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitlife"
            android:textSize="60sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/teal_700"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_your_exercise_journey_today"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/teal_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/personal_information"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_fname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:autofillHints=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/user_lname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/user_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/user_pwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/next"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/physical_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitlife"
            android:textSize="60sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/teal_700"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_your_exercise_journey_today"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/teal_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:text="@string/physical_information"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/user_weight"
                android:layout_width="137.5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:hint="@string/weight_lbs"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:autofillHints=""
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/user_height"
                android:layout_width="137.5dp"
                android:layout_height="wrap_content"
                android:hint="@string/height_cm"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:inputType="numberDecimal"
                android:autofillHints="" />
        </TableRow>

        <EditText
            android:id="@+id/user_age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:hint="@string/age"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/register"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/already_registered"/>

    <Button
        android:id="@+id/to_login_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />
</LinearLayout>