<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fitlife"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/teal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_your_exercise_journey_today"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/grey"/>

    <TextView
        android:id="@+id/error_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/red"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_gravity=""
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/grey"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/light_teal"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/grey"
        android:text="Need a new account?"/>

    <TextView
        android:id="@+id/to_register_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/register"
        android:textColor="@color/dark_teal"/>
</LinearLayout>